--- a/index.html
+++ b/index.html
@@ -4,31 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 1 - Survey Form</title>
+    <title>Survey Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Animation List -->
-    <div class="background">
-        <ul class="box-area">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-    </div>
-
-    <!-- Main Container -->
+    <!-- Sign Up Form -->
     <div class="login-container">
-        <h1>Sign Up</h1>
+        <h1 class="heading">Sign Up</h1>
         <form id="signup-form" class="signup-form">
             <input type="text" id="signup-input-name" class="signup__input" placeholder="Name*" required>
             <input type="text" id="signup-input-user" class="signup__input" placeholder="Username*" required>
@@ -36,11 +18,8 @@
             <input type="password" id="signup-input-password" class="signup__input" placeholder="Password*" required>
             <input type="password" id="signup-input-user" class="signup__input" placeholder="Confirm Password*" required>
             <input type="number" id="signup-input-user" class="signup__input" placeholder="Mobile*" required>
-            <button class="signup__submit">Create Account</button>
+            <button href="#" class="signup__submit">Create Account</button>
         </form>
-        <a href="#" id="loginLink" class="login">Login</a>
     </div>
-    
-    <script src="script.js"></script>
 </body>
 </html>
